# controller/carrier.controller.js
@@ -5,12 +5,7 @@ const Op = db.Sequelize.Op;
 // Create and Save a new Carrier
 exports.create = (req, res) => {
   // Validate request
-  if (!req.body.title) {
-    res.status(400).send({
-      message: 'Content can not be empty!',
-    });
-    return;
-  }
+ 
   // Create a Carrier
   const carrier = {
     CarrierType: req.body.CarrierType,
@@ -34,7 +29,9 @@ exports.create = (req, res) => {
       });
     })
     .catch((err) => {
+      console.log(`error`, err.message);
       res.status(500).send({
+       
         message: err.message || 'Some error occurred while creating the Carrier.',
       });
     });
@@ -42,8 +39,8 @@ exports.create = (req, res) => {
 
 // Retrieve all Carriers from the database.
 exports.findAll = (req, res) => {
-  const carrierType = req.query.CarrierType;
-  var condition = CarrierType ? { CarrierType: { [Op.iLike]: `%${carrierType}%` } } : null;
+  const carrierType = req.params.carrierType;
+  var condition = carrierType ? { CarrierType: { [Op.iLike]: `%${carrierType}%` } } : null;
 
   Carrier.findAll({ where: condition })
 
